<?xml version="1.0"?>
<package format="3">
  <name>motion_planning_python_api</name>
  <version>0.1.0</version>
  <description>A Python API for motion planning using MoveIt 2</description>
  <maintainer email="your-email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Optional testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
