<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ompl_constrained_planning</name>
  <version>0.1.0</version>
  <description>
    A package for OMPL constrained planning tutorials with MoveIt2.
  </description>
  <maintainer email="fawadahmed433@gmail.com">Fawad Ahmad</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit2</url>

  <author email="fawadahmed433@gmail.com">Fawad Ahmad</author>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <!-- Execution Dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
